--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                     <button data-prev type="button"><img src="./assets/arrow-left.svg" alt="Arrow"></button>
                     <div class="swiper">
                         <div class="swiper-wrapper">
-                            <form class="swiper-slide">
+                            <form class="card-produto swiper-slide">
                                 <a href="produto.html">
                                     <header>
                                         <span class="frete"><img src="./assets/frete.svg" alt="Frete">Frete grátis</span>
@@ -362,7 +362,7 @@
                                     <input type="number" min="1" max="99" value="1">
                                 </footer>
                             </form>
-                            <form class="swiper-slide">
+                            <form class="card-produto swiper-slide">
                                 <a href="produto.html">
                                     <header>
                                         <span class="frete"><img src="./assets/frete.svg" alt="Frete">Frete grátis</span>
@@ -381,7 +381,7 @@
                                     <input type="number" min="1" max="99" value="1">
                                 </footer>
                             </form>
-                            <form class="swiper-slide">
+                            <form class="card-produto swiper-slide">
                                 <a href="produto.html">
                                     <header>
                                         <span class="frete"><img src="./assets/frete.svg" alt="Frete">Frete grátis</span>
@@ -485,7 +485,7 @@
                     <button data-prev type="button"><img src="./assets/arrow-left.svg" alt="Arrow"></button>
                     <div class="swiper">
                         <div class="swiper-wrapper">
-                            <form class="swiper-slide">
+                            <form class="card-produto swiper-slide">
                                 <a href="produto.html">
                                     <header>
                                         <span class="frete"><img src="./assets/frete.svg" alt="Frete">Frete grátis</span>
@@ -504,7 +504,7 @@
                                     <input type="number" min="1" max="99" value="1">
                                 </footer>
                             </form>
-                            <form class="swiper-slide">
+                            <form class="card-produto swiper-slide">
                                 <a href="produto.html">
                                     <header>
                                         <span class="frete"><img src="./assets/frete.svg" alt="Frete">Frete grátis</span>
@@ -523,7 +523,7 @@
                                     <input type="number" min="1" max="99" value="1">
                                 </footer>
                             </form>
-                            <form class="swiper-slide">
+                            <form class="card-produto swiper-slide">
                                 <a href="produto.html">
                                     <header>
                                         <span class="frete"><img src="./assets/frete.svg" alt="Frete">Frete grátis</span>
@@ -668,6 +668,8 @@
             <button class="button" type="button">Aceitar e fechar</button>
         </div>
     </article> -->
+
+    <a class="btn-whatsapp" href="##" target="_blank"><img src="./assets/whatsapp-green.svg" alt="Whatsapp"></a>
 
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js" type="text/javascript"></script>
 <script src="./js/main.js" type="text/javascript"></script>
